# OffLoader

./: .gitignore  CMakeLists.txt  OffObject.cpp  OffObject.h  README.md  main.cpp
off_files/: cube.off  epcot.off  space_shuttle.off
src/: CMakeLists.txt
src/OffObject/: CMakeLists.txt
src/OffObject/include/: OffObject.h
src/OffObject/src/: OffObject.cpp
src/app/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  algo.off  testOffObject.cpp
